# CPP_SNAKE

./: CMakeLists.txt
include/: console.h  main.h
src/: console.cpp  main.cpp
